# db-studio

./: codemagic.yaml
desktop/: CMakeLists.txt  Main.cpp
mobile/: pubspec.yaml
mobile/lib/: main.dart
